Adding option in case tmp already there
Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                 echo "Git Branch is ${GIT_BRANCH}"
                 echo "Git Commit is ${GIT_COMMIT}"
                 echo "Git URL    is ${GIT_URL}"
-                sh "mkdir ${WORKSPACE}/tmp"
+                sh "sudo mkdir -p ${WORKSPACE}/tmp"
             }
         }
         stage ('Retrieve Source Code') {
